# PokeRanchV2

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
Engine/: CMakeLists.txt
Engine/BaseClasses/include/: Engine.h  GameElement.h  GameState.h  NetworkManager.h
Engine/BaseClasses/src/: Engine.cpp  GameElement.cpp  GameState.cpp  NetworkManager.cpp
Engine/BasicInterfaces/: IEngine.h  IGameElement.h  IGameState.h  INetworkManager.h
Engine/GUI/Button/: Button.cpp  Button.h  ImageButton.cpp  ImageButton.h
Engine/GUI/Form/: Form.cpp  Form.h
Engine/GUI/InputText/: InputText.cpp  InputText.h
Engine/GUI/NavBar/: NavBar.cpp  NavBar.h
Engine/GUI/ProgressBar/: ProgressBar.cpp  ProgressBar.h
Engine/GUI/imgui/: imgui_impl_opengl3.cpp
Engine/Network/: HttpNetworkManager.cpp  HttpNetworkManager.h  UserSession.cpp  UserSession.h
Engine/Renderable/GameWindow/: GameWindow.cpp  GameWindow.h
Engine/Renderable/Model/: AnimModel.cpp  AnimModel.h  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h
Engine/Renderable/Picture/: Picture.cpp  Picture.h
Engine/Renderable/ShaderProgram/: ShaderProgram.cpp  ShaderProgram.h
Engine/Renderable/Shaders/: empty_shader.fs  incorrect_f_model_anim_shader.fs  incorrect_v_model_anim_pokedex_shader.vs  testExample.fs  testExample.vs
Game/: CMakeLists.txt  imgui.ini  main.cpp
Game/Cupcake/: Cupcake.cpp  Cupcake.h
Game/Pokemon/: Pokemon.cpp  Pokemon.h
Game/PokemonInfoUpdater/: PokemonInfoUpdater.cpp  PokemonInfoUpdater.h
Game/Resources/Models/PokemonAmie/: rainbow.dae
Game/Resources/Models/PokemonCenterMachines/Computer/: Computer.mtl
Game/Resources/Models/PokemonCenterMachines/Pokemon Healing Machine/: PokemonHealingMachine.mtl
Game/Resources/Models/PokemonCenterMachines/Screen/: Screen.mtl
Game/Resources/Models/Pokemons/Pikachu/: eat.dae
Game/Resources/Models/Pokemons/Vulpix/: awakening.dae  eat.dae  emotion.dae  run.dae  sleep.dae  stay.dae  walk.dae
Game/Resources/Models/Scientist/SMD Animations/: anim_2.smd  anim_3.smd
Game/Resources/Models/Static/AzaleaGym/: Azalea Gym.mtl
Game/Resources/Models/Static/CookPlate/: Cookery_Plate.mtl
Game/Resources/Models/Static/MistyTerrain/: fwaza_mist.dae  fwaza_mist.smd  terrain.dae  terrain2.dae
Game/Resources/Models/Static/PokemonAmie/: pink.dae  trash.dae  withoutAll.dae  withoutBubbles.dae
Game/Resources/Models/Static/PokemonCenter/Door/: Door.mtl
Game/Resources/Models/Static/PokemonCenter/Pokemon Center/: Pokemon Center.mtl
Game/Resources/Models/Static/PokemonHouse/: PokemonHouse.mtl
Game/Resources/Models/TrainerMale/: avatar.dae
Game/Resources/Models/TrainerMale/Red/SMD Animations/: anim_5.smd
Game/Resources/Models/Trainers/Cook/: stay.dae
Game/Resources/Models/Trainers/Molayne/: stay.dae  try.dae
Game/Resources/Models/Trainers/Scientist/: stay.dae  throw.dae  tr0086_00.smd
Game/Resources/Models/Trainers/Scientist/SMD Animations/: anim_0.smd  anim_1.smd  anim_10.smd  anim_4.smd  anim_5.smd
Game/Resources/Models/Trainers/Sina/: stay.dae
Game/Resources/Models/Trainers/Sophocles/: stay.dae
Game/Resources/Models/Trainers/TrainerMale/Red/: tr0037_00.dae  tr0037_00.smd
Game/Resources/Models/Trainers/TrainerMale/Red/SMD Animations/: anim_0.smd  anim_1.smd  anim_2.smd  anim_3.smd  anim_4.smd
Game/ServerAPI/: ServerAPI.cpp  ServerAPI.h
Game/States/include/: AuthState.h  GymState.h  HomeState.h  KitchenState.h  PokemonSelectionState.h  RegisterState.h  SelectionState.h  TrainerSelectionState.h
Game/States/src/: AuthState.cpp  GymState.cpp  HomeState.cpp  KitchenState.cpp  PokemonSelectionState.cpp  RegisterState.cpp  SelectionState.cpp  TrainerSelectionState.cpp
Game/UserSession/: UserSession.cpp  UserSession.h
Game/Utils/ButtonFunctions/: ButtonFunctions.cpp  ButtonFunctions.h  ButtonFunctions.hpp
Game/Utils/ModelSwitcher/: ModelSwitcher.h  ModelSwitcher.hpp
Game/Utils/MoveToStatesFuncs/: MoveFuncs.h
Game/Utils/PathManager/: PathManager.cpp  PathManager.h
StateTest/: CMakeLists.txt  EngineTest.cpp  GameElementTest.cpp  GameStateTest.cpp  myTest.cpp
TestNetwork/: CMakeLists.txt  sessionTest.cpp  simpleGet.cpp
TestRenderAudio/: CMakeLists.txt  GameWindow_test.cpp  Mesh_test.cpp  Model_test.cpp  ShaderProgram_test.cpp  formMain.cpp
